<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>example</groupId>
  <artifactId>generator</artifactId>
  <version>0.9.0-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>${project.groupId}:${project.artifactId}</name>
  <properties>
    <mainClass>Generator</mainClass>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <finalName>${project.groupId}.${project.artifactId}</finalName>
    <java.version>11</java.version>
    <!--
    <cb2xml.version>0.93.2</cb2xml.version>
    <jrecord.version>0.93.2</jrecord.version> -->
    <cb2xml.version>1.01.08</cb2xml.version>
    <jrecord.version>0.93.3</jrecord.version>
    <gson.version>2.8.9</gson.version>
    <commandline-parser.version>0.12.0-SNAPSHOT</commandline-parser.version>
    <commons-configuration.version>1.10</commons-configuration.version>
    <commons-collections4.version>4.2</commons-collections4.version>
    <commons-exec.version>1.3</commons-exec.version>
    <commons-io.version>2.7</commons-io.version>
    <commons-lang3.version>3.3.1</commons-lang3.version>
    <hamcrest-all.version>1.3</hamcrest-all.version>
    <junit.version>5.12.1</junit.version>
    <junit-platform.version>1.12.1</junit-platform.version>
    <maven-compiler-plugin.version>3.6.0</maven-compiler-plugin.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
    <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
    <json-path.version>2.9.0</json-path.version>
    <snakeyaml.version>2.0</snakeyaml.version>
  </properties>
  <dependencies>
    <dependency>
      <groupId>com.jayway.jsonpath</groupId>
      <artifactId>json-path</artifactId>
      <scope>test</scope>
      <version>${json-path.version}</version>
    </dependency>
    <dependency>
      <groupId>net.sf</groupId>
      <artifactId>cb2xml</artifactId>
      <version>${cb2xml.version}</version>
    </dependency>
    <dependency>
      <groupId>net.sf.jrecord</groupId>
      <artifactId>JRecord</artifactId>
      <version>${jrecord.version}</version>
    </dependency>
    <!--
    <dependency>
      <groupId>net.sf.jrecord</groupId>
      <artifactId>cb2xml</artifactId>
      <version>${cb2xml.version}</version>
    </dependency>
    <dependency>
      <groupId>net.sf.jrecord</groupId>
      <artifactId>JRecord</artifactId>
      <version>${jrecord.version}</version>
    </dependency> -->
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-all</artifactId>
      <version>${hamcrest-all.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>commons-configuration</groupId>
      <artifactId>commons-configuration</artifactId>
      <version>${commons-configuration.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-collections4</artifactId>
      <version>${commons-collections4.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>${commons-lang3.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${commons-io.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-exec</artifactId>
      <version>${commons-exec.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-launcher</artifactId>
      <version>${junit-platform.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.yaml</groupId>
      <artifactId>snakeyaml</artifactId>
      <version>${snakeyaml.version}</version>
    </dependency>
    <!--
    <dependency>
      <groupId>example</groupId>
      <artifactId>commandline-parser</artifactId>
      <version>${commandline-parser.version}</version>
      <exclusions>
        <exclusion>
          <groupId>com.google.guava</groupId>
          <artifactId>guava</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.json</groupId>
          <artifactId>json</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.google.code.gson</groupId>
          <artifactId>gson</artifactId>
        </exclusion>
      </exclusions>
    </dependency> -->
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>${gson.version}</version>
      <exclusions>
        <exclusion>
          <!-- exclude side by side versions of guava jar from gson -->
          <groupId>com.google.guava</groupId>
          <artifactId>guava</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
  </dependencies>
  <build>
    <sourceDirectory>src/main/java</sourceDirectory>
    <testSourceDirectory>src/test/java</testSourceDirectory>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <goals>
          <goal>compile</goal>
        </goals>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <encoding>${encoding}</encoding>
          <!-- On windows one needs to update console code page outside of maven
to work with cyrillic pages:
chcp 65001
set JAVA_TOOL_OPTIONS=-Dfile.encoding=UTF-8
rem ${encoding}
 -->
          <compilerArgument>-Xlint:all</compilerArgument>
          <compilerArgument>-Xlint:-processing</compilerArgument>
          <showWarnings>true</showWarnings>
          <showDeprecation>true</showDeprecation>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <phase>install</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/lib</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
          <includes>
            <include>**/*Test.java</include>
          </includes>
          <useModulePath>false</useModulePath>
          <trimStackTrace>false</trimStackTrace>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <version>${maven-resources-plugin.version}</version>
        <artifactId>maven-resources-plugin</artifactId>
        <configuration>
          <encoding>${encoding}</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <version>${maven-resources-plugin.version}</version>
        <artifactId>maven-resources-plugin</artifactId>
        <configuration>
          <encoding>${project.build.sourceEncoding}</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifest>
              <mainClass>${mainClass}</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
    </plugins>
    <finalName>${finalName}</finalName>
  </build>
  <!-- TODO: use "sourceforge" and "github" profiles -->
  <repositories>
    <repository>
      <id>private-local</id>
      <url>file:///${env.MAVEN_LOCAL_REPO}</url>
    </repository>
  </repositories>
</project>
